--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -16,8 +16,9 @@ jobs:
       run: |
         docker run --name android-test-container -d -p 4723:4723 android-test-image
 
-    - name: Install Appium drivers
-      run: docker exec android-test-container bash -c "npm install -g appium-uiautomator2-driver && appium driver install uiautomator2"
+
+    #- name: Install Appium drivers
+    #  run: docker exec android-test-container bash -c "npm install -g appium-uiautomator2-driver && appium driver install uiautomator2"
 
     - name: List installed Appium drivers
       run: docker exec android-test-container appium driver list --installed
